--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,18 @@
-flask>=2.0.1
-flask-cors>=3.0.10
-pydantic>=2.0.0
-python-dotenv>=0.19.0
-openai>=1.0.0
-langchain>=0.1.0
-langchain-community>=0.0.10
-faiss-cpu>=1.7.4
-pypdf>=3.0.0
-typing>=3.7.4
-uuid>=1.30
+Flask==3.0.0
+Flask-CORS==4.0.0
+Werkzeug==3.0.1
+python-dotenv==1.0.0
+openai==1.12.0
+requests==2.31.0
+urllib3==2.1.0
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
+itsdangerous==2.1.2
+Jinja2==3.1.3
+MarkupSafe==2.1.5
+idna==3.6
+typing-extensions==4.9.0
+colorama==0.4.6
+blinker==1.7.0
 gunicorn
